# masquerade

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
configs/vae/: muse-256-f16.yaml
scripts/: get-models.py
src/masquerade/: __init__.py  __main__.py  cli.py  train_vae.py  utils.py
src/masquerade/data/: files.py
src/masquerade/dataset/: __init__.py
src/masquerade/datasets/: huggingface.py
src/masquerade/models/: __init__.py  autoencoder.py  text_encoder.py  vqvae.py
src/masquerade/modules/: attention.py  discriminator.py  distributions.py  ema.py  utils.py
src/masquerade/modules/encoders/: __init__.py  modules.py
src/masquerade/modules/losses/: __init__.py  general.py  lpips.py  patchgan.py  vqperceptual.py
src/masquerade/modules/vqvae/: __init__.py  layers.py  modules.py
src/masquerade/trainer/: __init__.py  callbacks.py  settings.py  util.py  vae.py
