[metadata]
name = masquerade
author = Andi Powers-Holmes
email = aholmes@omnom.net
maintainer = Andi Powers-Holmes
maintainer_email = aholmes@omnom.net
license_files = LICENSE.md

[options]
python_requires = >=3.8
packages = find:
package_dir =
    =src
py_modules =
    masquerade
include_package_data = True
install_requires =
    accelerate >= 0.20.3
    crc32c >= 2.3
    colorama >= 0.4.3, < 0.5.0
    datasets >= 2.13.0
    diffusers >= 0.17.1
    einops >= 0.6.1
    kornia >= 0.6.12
    lightning >= 2.0.0, < 2.1.0
    ninja >= 1.11.0
    numpy >= 1.24.3
    omegaconf >= 2.3.0
    open-clip-torch >= 2.20.0
    pillow >= 9.5.0, < 10.0.0
    pydantic >= 1.10.8, < 2.0.0
    pynvml >= 11.0.0, < 12.0.0
    pytorch-fid >= 0.3.0
    rich >= 13.0.0, < 14.0.0
    safetensors >= 0.3.1
    sentencepiece >= 0.1.99
    shellingham >= 1.5.0, < 2.0.0
    soundfile >= 0.12.1
    tensorboardx >= 2.6
    tokenizers >= 0.13.3
    torch >= 2.0.0, < 2.2.0
    torchvision
    tqdm >= 4.65.0
    transformers >= 4.30.2
    typer >= 0.9.0, < 1.0.0
    wandb >= 0.15.4, < 0.16.0
    webdataset >= 0.2.33

[options.packages.find]
where = src

[options.package_data]
    * = *.txt, *.md, *.css

[options.extras_require]
dev =
    black >= 22.3.0
    ruff >= 0.0.234
    setuptools-scm >= 7.0.0
    mypy >= 0.981

[options.entry_points]
console_scripts =
    masquerade = masquerade.cli:main

[flake8]
max-line-length = 110
ignore =
    # these are annoying during development but should be enabled later
    F401 # module imported but unused
    F841 # local variable is assigned to but never used
    # black automatically fixes this
    E501 # line too long
    # black breaks these two rules:
    E203 # whitespace before :
    W503 # line break before binary operator
    # this rule makes flake hate Typer so
    B008 # do not perform function calls in argument defaults
extend-exclude =
    .venv
